--- a/LineComparisonComputationProgram/LineComparisonComputationProgram.csproj
+++ b/LineComparisonComputationProgram/LineComparisonComputationProgram.csproj
@@ -46,6 +46,7 @@
     <Compile Include="FindLineLength.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwoLineComparison.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
