--- a/LineComparisonComputationProgram/LineComparisonComputationProgram.csproj
+++ b/LineComparisonComputationProgram/LineComparisonComputationProgram.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DisplayComarisonResult.cs" />
     <Compile Include="FindLineLength.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
